--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch src/index.ts",
-    "start": "bun src/index.ts"
+    "start": "bun src/index.ts",
+    "build": "bun build --compile --minify --sourcemap ./src/index.ts --outfile linuxProxy --target=bun-linux-x64"
   },
   "private": true,
   "devDependencies": {
